--- a/configs/official-1124/OLMo2-7B-stage1.yaml
+++ b/configs/official-1124/OLMo2-7B-stage1.yaml
@@ -3,10 +3,10 @@ seed: 6198
 dry_run: false
 
 model:
-  d_model: 4096
-  n_heads: 32
-  n_layers: 32
-  mlp_hidden_size: 22016
+  d_model: 1024
+  n_heads: 8
+  n_layers: 12
+  mlp_hidden_size: 5504
   weight_tying: false
   alibi: false
   rope: true
@@ -37,7 +37,7 @@ model:
 
 softmax_auxiliary_loss: true
 auxiliary_loss_multiplier: 1e-5
-fused_loss: true
+fused_loss: false
 
 compile: null
 
@@ -56,8 +56,8 @@ optimizer:
 scheduler:
   name: cosine_with_warmup
   units: tokens
-  t_warmup: 8388608000
-  t_max: 5e12
+  t_warmup: 5e8
+  t_max: 5e9
   alpha_f: 0.1
   warmup_min_lr: 0.0
 
@@ -77,15 +77,19 @@ save_num_unsharded_checkpoints_to_keep: -1
 
 load_path: null
 
-max_duration: 1ep
-global_train_batch_size: 1024
-device_train_microbatch_size: 2
+max_duration: 2385
+global_train_batch_size: 512
+device_train_microbatch_size: 4
 
 precision: amp_bf16
 
-fsdp:
-  wrapping_strategy: by_block_and_size
-  precision: mixed
+# fsdp:
+#   wrapping_strategy: by_block_and_size
+#   precision: mixed
+
+ddp:
+  grad_sync_mode: batch
+  find_unused_params: false
 
 max_grad_norm: 1.0
 max_grad_norm_ratio: null
